<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgsignin"
    tools:context=".SigninActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="83dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/logoblanco" />

    <ImageButton
        android:id="@+id/btnVolverInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:foregroundTint="@color/white"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@android:drawable/ic_media_play"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="@color/PakistanGreen"
        android:text="@string/tituloRegistrarse"
        android:textAlignment="center"
        android:textColor="@color/BlackOlive"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="301dp"
        android:layout_height="34dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/ingresarDatosSignin"
        android:textAlignment="center"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.032" />

    <View
        android:id="@+id/view"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/officeGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <EditText
        android:id="@+id/txtRegistroNombre"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/campoNombreRegistro"
        android:inputType="text"
        android:textColor="@color/BlackOlive"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegistroUser"
        android:layout_width="285dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:hint="@string/campoUserRegistro"
        android:textColor="@color/BlackOlive"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistroApellido" />


    <EditText
        android:id="@+id/txtRegistroPasswordConfirm"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:hint="@string/campoPasswordConfirm"
        android:textColor="@color/BlackOlive"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistroPassword"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:id="@+id/txtRegistroPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:hint="@string/campoPasswordRegistro"
        android:textColor="@color/BlackOlive"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistroUser" />

    <EditText
        android:id="@+id/txtRegistroApellido"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:hint="@string/campoApellidoRegistro"
        android:textColor="@color/BlackOlive"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistroNombre" />

    <Button
        android:id="@+id/btnCrearNuevaCuenta"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/PakistanGreen"
        android:text="@string/btnCrearNuevaCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />


</androidx.constraintlayout.widget.ConstraintLayout>