<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FichaTecnicaCaracEntornoActivity"
    android:background="@drawable/bgnuevoregistro">

    <Spinner
        android:id="@+id/spinnerDensidadVegetal"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@color/AntiFlashWhite"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPresenciaAgua" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/AppleGreen"
        android:backgroundTint="@color/AppleGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/btnMenuPrincipal"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/menuprincipalboton"
        android:src="@drawable/menuprincipalboton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="@color/white"
        android:text="@string/tituloNuevoRegistro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pasoCuatro"
        android:textAlignment="center"
        android:textColor="@color/PakistanGreen"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMenuPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/indicacionesFichaTecnica"
        android:textAlignment="center"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.012" />


    <View
        android:id="@+id/view"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/officeGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/btnGuardarRegistro"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/officeGreen"
        android:text="@string/btnguardarRegistro"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEcosistema"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/textView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="276dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvNombre"
        android:textAlignment="viewStart"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtNombre"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView06"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="170dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvDensidadVegetal"
        android:textAlignment="viewStart"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinnerPresenciaAgua"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView05"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView05"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvPresenciaDeAgua"
        android:textAlignment="viewStart"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView04" />

    <TextView
        android:id="@+id/textView02"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvEcosistema"
        android:textAlignment="viewStart"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtEcosistema"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView01" />

    <TextView
        android:id="@+id/textView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvTemperatura"
        android:textAlignment="viewStart"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtTemperatura"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView02" />

    <TextView
        android:id="@+id/textView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvAltitud"
        android:textAlignment="viewStart"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtAltitud"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView03" />

    <EditText
        android:id="@+id/txtTemperatura"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEcosistema" />

    <EditText
        android:id="@+id/txtAltitud"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTemperatura" />

    <Spinner
        android:id="@+id/spinnerPresenciaAgua"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/AntiFlashWhite"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/BlackOlive"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAltitud" />


</androidx.constraintlayout.widget.ConstraintLayout>